test/code/test_ternary_block.out

Parse error: syntax error, unexpected '{' in {{CWD}}/test/code/test_ternary_block.php on line 3
