test/code/test_ternary_block.php
<?php

$data = (5 > 10) ? { print "NO!"; exit(1); } : { print "OK!"; print "\n"; }
